# kiro-account-manager

./: README.md  clippy-output.txt  index.html  package.json  vite.config.js
.github/workflows/: release.yml
locales/: en-US.json  ru-RU.json  zh-CN.json
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: account.rs  auth.rs  auth_social.rs  aws_sso_client.rs  browser.rs  codewhisperer_client.rs  deep_link_handler.rs  email_client.rs  kiro.rs  kiro_auth_client.rs  main.rs  mcp.rs  powers.rs  process.rs  registration.rs  state.rs  steering.rs  verification_code.rs
src-tauri/src/commands/: account_cmd.rs  app_settings_cmd.rs  auth_cmd.rs  email_template_cmd.rs  kiro_settings_cmd.rs  machine_guid_cmd.rs  mod.rs  powers_cmd.rs  proxy_cmd.rs  registration_cmd.rs  sso_import_cmd.rs  web_oauth_cmd.rs
src-tauri/src/providers/: base.rs  factory.rs  idc.rs  mod.rs  social.rs  web.rs
src/components/: AccountDetailModal.jsx  ErrorBoundary.jsx  Home.jsx  Login.jsx  Settings.jsx  Sidebar.jsx  WebOAuthLogin.jsx
src/components/AccountManager/: AccountCard.jsx  AccountGrid.jsx  AccountHeader.jsx  AccountList.jsx  AccountRow.jsx  ConfirmDialog.jsx  ContextMenu.jsx  index.jsx
src/components/AccountManager/hooks/: useAccounts.js
src/components/KiroConfig/: PowersPanel.jsx
src/components/OneClickRegistration/: EditRecordModal.jsx  EmailConfigPanel.jsx  EmailTemplateSelector.jsx  RegistrationControlPanel.jsx  RegistrationRecordRow.jsx  RegistrationRecordTable.jsx  SyncProgressModal.jsx  index.jsx
src/components/OneClickRegistration/hooks/: useRegistrationProcess.js  useRegistrationRecords.js
src/components/PowersManager/: index.jsx
src/utils/: accountStats.js
