[package]
name = "kiro-account-manager"
version = "1.7.7"
description = "Kiro Account Manager - 管理 Kiro IDE 账号，支持多账号切换和配额监控"
authors = ["hj01857655"]
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/hj01857655/kiro-account-manager"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-http = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs"] }
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "cookies", "stream"] }
url = "2.5"
open = "5.0"
tiny_http = "0.12"
rand = "0.8"
sha2 = "0.10"
sha1 = "0.10"
base64 = "0.22"
urlencoding = "2.1"
ciborium = "0.2"
serde_cbor = "0.11"
regex = "1.10"
once_cell = "1.19"
hex = "0.4"
async-trait = "0.1"
cookie = "0.18"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }

# 邮箱客户端依赖（一键注册功能）
async-imap = "0.9"
async-native-tls = "0.5"
aes-gcm = "0.10"
async-std = { version = "1.12", features = ["attributes"] }
futures = "0.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# 开发配置：增量编译加速
[profile.dev]
incremental = true

# 发布配置：优化二进制体积
[profile.release]
codegen-units = 1    # 允许 LLVM 更好的优化
lto = "fat"          # 启用最激进的链接时优化（比 true 更强）
opt-level = "z"      # 最小体积优化（比 "s" 更激进）
panic = "abort"      # 禁用 panic 处理器，提升性能
strip = "symbols"    # 移除符号信息（比 true 更彻底）
